--- a/template/mainWindow.html
+++ b/template/mainWindow.html
@@ -9,27 +9,25 @@
       <div class="flex">
         <div class="flex-1 h-screen">
           <div class="w-full max-w-xs h-full flex justify-center items-center">
-            <form class="bg-white rounded px-8 pt-6 pb-8 mb-4">
-              <div class="mb-4">
+            <form id="login-form" class="bg-white rounded px-8 pt-6 pb-8 mb-4">
+              <div class="mb-2">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-                  Username
+                  E-Mail
                 </label>
-                <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+                <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none" id="email" type="text" placeholder="E-Mail">
               </div>
               <div class="mb-6">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                   Password
                 </label>
-                <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
+                <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none" id="password" type="password" placeholder="Password">
               </div>
               <div class="flex items-center justify-between">
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                  Sign In
+                <button class="bg-blue-500 hover:bg-blue-700 text-white w-full font-bold py-2 px-4 rounded focus:outline-none" type="submit">
+                  Login
                 </button>
-                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-                  Forgot Password?
-                </a>
               </div>
+              <div id="error-text" class="mt-3 text-red-700 text-sm italic hidden">Wrong email or password.</div>
             </form>
           </div>
         </div>
@@ -38,5 +36,31 @@
         </div>
       </div>
     </div>
+
+    <script>
+
+      const electron = require('electron');
+      const {ipcRenderer} = electron;
+
+      const form = document.querySelector("#login-form");
+      form.addEventListener("submit", submitForm);
+      
+      function submitForm(e){
+        e.preventDefault();
+        const user_info = {
+          email: document.querySelector("#email").value,
+          password: document.querySelector("#password").value
+        }
+        ipcRenderer.send("login:check", user_info);
+      }
+
+      ipcRenderer.on('login:error', function(){
+        const error_text = document.querySelector("#error-text");
+        error_text.style.display = "block";
+      });
+
+  </script>
+
+
   </body>
 </html>
