--- a/template/mainWindow.html
+++ b/template/mainWindow.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="flex-1">
-          <img src="../assets/wall-login.jpg" class="w-full h-auto">
+          <img src="../assets/images/wall-login.jpg" class="w-full h-auto">
         </div>
       </div>
     </div>
