--- a/template/mainWindow.html
+++ b/template/mainWindow.html
@@ -5,8 +5,24 @@
     <link rel="stylesheet" href="../assets/tailwind.css">
   </head>
   <body>
-    
-    <h1>Dashboard</h1>
+
+    <div class="sidebar fixed h-screen bg-gray-800 py-4 px-2">
+      <div class="sidebar-item rounded-full w-10 h-10 bg-green-700 opacity-100 cursor-pointer p-2 mb-2">
+        <img class="fill-current text-white w-10 h-auto" src="../assets/images/lock.svg">
+      </div>
+      <div class="sidebar-item rounded-full w-10 h-10 bg-gray-700 opacity-75 cursor-pointer p-2 mb-2">
+        <img class="fill-current text-white w-10 h-auto" src="../assets/images/database.svg">
+      </div>
+      <div class="sidebar-item rounded-full w-10 h-10 bg-gray-700 opacity-75 cursor-pointer p-2 mb-2">
+        <img class="fill-current text-white w-10 h-auto" src="../assets/images/info.svg">
+      </div>
+      <div class="sidebar-item rounded-full w-10 h-10 bg-gray-700 opacity-75 cursor-pointer p-2 mb-2">
+        <img class="fill-current text-white w-10 h-auto" src="../assets/images/settings.svg">
+      </div>
+    </div>
+
+
+
 
     <script>
 
